k8s/store-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store-api
  template:
    metadata:
      labels:
        app: store-api
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: POSTGRES_PASSWORD
              name: postgresql-secrets
        - name: POSTGRES_DB
          valueFrom:
            secretKeyRef:
              key: POSTGRES_DB
              name: postgresql-secrets
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: POSTGRES_USER
              name: postgresql-secrets
        - name: POSTGRES_HOST
          valueFrom:
            secretKeyRef:
              key: POSTGRES_HOST
              name: postgresql-secrets
        image: 521558197391.dkr.ecr.ap-south-1.amazonaws.com/store-api:11
        livenessProbe:
          httpGet:
            httpHeaders: null
            path: /ready
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        name: store-api
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            httpHeaders: null
            path: /ready
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          limits:
            cpu: '1'
            memory: 512Mi
          requests:
            cpu: '0.5'
            memory: 256Mi
      serviceAccountName: store-api-oidc
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app: store-api
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
