k8s/store-api/alb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: store-api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app: store-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
